@@ -1,6 +1,6 @@
 AUX chromium.png 7266 RMD160 e9651563c5bb8021ef1c03a94f0a3da65eaac486 SHA1 8a83a66c09e282dd4b9428e653f7f41d5acf3184 SHA256 966fa6e9971b86ddec6a5dc9ff5f5ee08228c211ca76b2ed404b98a71b6612be
-DIST chromium-bin-17395.zip 14611469 RMD160 978a6bb1223fcfdb1166c78538a57432a3ca5652 SHA1 448dd86e883cefc3bf3c56f8bdfb1883951a183b SHA256 181b74553cc9ea29abe56344328ca966f614909d9983d90bcce7ab6bc6841773
-EBUILD chromium-bin-0_p17395.ebuild 2068 RMD160 6cc0a949aa6a3eefed0e19b9705199313f77426f SHA1 1517ba4cb98160925dedec1b91544988bcff229a SHA256 2d3176d0be1a186acc8a1a77e704bc93cbe84ce8359c18ca881d17fedce40907
-EBUILD chromium-bin-9999.ebuild 2204 RMD160 a100c35cb0304655c52cb69f2dcae164f5903b55 SHA1 75b06a079f6c6c7c25743b0ff08547a0414350b7 SHA256 e399d20ac3da49a00b713730014e390704403807a909d267211d30cfcc6d8447
-MISC ChangeLog 1493 RMD160 bcbe6ec990f87c5a4464b52e32c06ebb15049c98 SHA1 7e8a983f3103095998d345b1523698b3f1c107f5 SHA256 825d0749dd996dfb58faa139015a7c42c0113561f8763f3cdc976093d2b27513
+DIST chromium-bin-17935.zip 14742004 RMD160 09b4a53208a195b0cc47c19e251106d4b7f42651 SHA1 ff822b3252231bc4f9683e703a9d62f2913042a5 SHA256 0642db43121c0e34ef62b544d3846de7f68db89f5111eb23b49a794b01bb08d0
+EBUILD chromium-bin-0_p17935.ebuild 2304 RMD160 3c4bb4acfa69e8822cc1fb7cfb185435ed4cc84a SHA1 5e51b66adcf0b78a128d6c29140f3923743831d2 SHA256 4cdb1e6234e9602334d0f83ed869721a9870d53194c4dafdd4919a45c08295b9
+EBUILD chromium-bin-9999.ebuild 2440 RMD160 16f0acbbab4cfc676bf90859831c19373c510f6c SHA1 c0a45958b310e483d79d9a5d8a168a74c5e4645b SHA256 a90e8c0280b887db2bf5bd84e49f25a80822b258ada85e9a85130a4ae577aa89
+MISC ChangeLog 1749 RMD160 13fcd7656a30b7a02eea00be4c7a35c88b9fce77 SHA1 c0b2f114f8d3fa0fffe1db047174bba7a87b0b26 SHA256 603af9afc84799f0cccbb267dbcf7e5c2ecf842d9f19ac36d815be051ee7c6e7
 MISC metadata.xml 365 RMD160 82a744318b3662d5cca5d912b98551f9fb193235 SHA1 2bbbeed534cb3b497e11df6be9f1e27a3c6abc44 SHA256 7547574cd9d8ae8c392a7e88180cb035c879d035250808d2939256617ce3d601
